--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
 		"@popperjs/core": "^2.11.8",
 		"axios": "^1.4.0",
 		"bootstrap": "^5.3.0",
+		"bootstrap-vue": "^2.23.1",
 		"core-js": "^3.8.3",
 		"jquery": "^3.7.0",
-		"vue": "^3.2.13",
+		"vue": "^3.3.4",
 		"vue-router": "^4.2.2"
 	},
 	"devDependencies": {
